# Gearsimulation

./: CMakeLists.txt  Ideensammlung  README.md  makefile  test
include/: Gear.hpp
src/: Gear.cpp  main.cpp
